# myblogs

./: .gitignore  Cargo.toml  Trunk.toml  index.html  index.scss  package-lock.json  package.json  tailwind.config.js  tailwind.css
data/: aboutme.txt  contents.md
src/: contents.rs  main.rs
src/api/: content.rs  mod.rs  profile.rs  repo.rs  request.rs
src/components/: about.rs  aboutme.rs  card_project.rs  comp_content.rs  hero.rs  landing.rs  lang.rs  media_social.rs  mod.rs  provider.rs
src/markdown_parser/: mod.rs  parser.rs  translate.rs
src/pages/: aboutdeeper.rs  aboutme.rs  aboutpage.rs  home.rs  landing.rs  mod.rs  projects.rs
src/util/: mdparser.rs  mod.rs
static/: style.css
