[package]
name = "aboutme"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
anyhow = "1.0.66"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
gloo = { version = "0.8.0", features = ["futures"] }
pulldown-cmark = "0.9.2"
reqwest = { version = "0.11.12", features = ["json"] }

[dependencies.nom]
version = "7"
default-features = false
features = ["alloc"]
